[package]
name = "MyFirstBevyGame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
# !important: The dynamic feature should be disabled before releasing the game!
bevy = { version = "0.7.0", features = ["dynamic"] }
# bevy = "0.7.0"
